# UNA-CHALLENGE-ANALYSIS

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: test-process.py  viewIT2.ipynb
notebooks/data/raw/: CHANGES  dataset_description.json
notebooks/data/raw/sub-001/ses-01/ecg/: sub-001_ses-01_task-szMonitoring_run-01_ecg.json  sub-001_ses-01_task-szMonitoring_run-02_ecg.json  sub-001_ses-01_task-szMonitoring_run-03_ecg.json  sub-001_ses-01_task-szMonitoring_run-04_ecg.json  sub-001_ses-01_task-szMonitoring_run-05_ecg.json  sub-001_ses-01_task-szMonitoring_run-06_ecg.json  sub-001_ses-01_task-szMonitoring_run-07_ecg.json  sub-001_ses-01_task-szMonitoring_run-08_ecg.json  sub-001_ses-01_task-szMonitoring_run-09_ecg.json
notebooks/data/raw/sub-001/ses-01/eeg/: sub-001_ses-01_task-szMonitoring_run-01_eeg.json  sub-001_ses-01_task-szMonitoring_run-01_events.tsv  sub-001_ses-01_task-szMonitoring_run-02_eeg.json  sub-001_ses-01_task-szMonitoring_run-02_events.tsv  sub-001_ses-01_task-szMonitoring_run-03_eeg.json  sub-001_ses-01_task-szMonitoring_run-03_events.tsv  sub-001_ses-01_task-szMonitoring_run-04_eeg.json  sub-001_ses-01_task-szMonitoring_run-04_events.tsv  (+10 more)
reports/: processing_times.csv
src/gpu_backend/: CMakeLists.txt
src/gpu_backend/bindings/: pybind_stft.cpp
src/gpu_backend/include/src/: apply_hann.cu  apply_log.cu  compute_magnitude.cu  stft_gpu.cu
src/preprocessing/: stft.py  stft_gpu.py
src/processing/: stft_all_subjects.py  stft_all_subjects_gpu.py
(+18 files in other folders)
