[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "una_challenge_analysis"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "FERICA" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["una_challenge_analysis"]
include = ["pyproject.toml", "una_challenge_analysis/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["una_challenge_analysis"]
force-sort-within-sections = true

